<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.main.detail.DetailStoryActivity">


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:translationZ="1dp"
        android:contentDescription="@string/photo_or_image_story"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/ll_name_date"
        android:background="@drawable/ic_baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/iv_story"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_detail"
        android:maxHeight="580dp"
        android:src="@drawable/shape_background_image"
        android:transitionName="story" />


    <LinearLayout
        android:id="@+id/ll_name_date"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="3dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:transitionName="name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_name"
            style="@style/TextView.20spFFFFFF"
             />

        <TextView
            android:id="@+id/tv_date"
            android:transitionName="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/date"
            style="@style/TextView.15spFFFFFF"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_description"
        style="@style/TextView.15spFFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/background_blue_opaticy_low"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/content_description"
        android:transitionName="description" />


</RelativeLayout>