<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_gravity="center_horizontal"
    app:cardCornerRadius="20dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_gradient"
        android:padding="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:background="@drawable/background_white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_story"
                android:layout_width="match_parent"
                android:contentDescription="@string/story_image"
                android:layout_height="155dp"
                android:src="@color/dark" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:baselineAligned="false">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="0.3"
               android:orientation="vertical">

               <TextView
                   android:layout_marginStart="16dp"
                   android:id="@+id/tv_name"
                   android:paddingTop="6dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/text_name"
                   android:textColor="@color/dark"
                   android:textSize="16sp" />

               <TextView
                   android:id="@+id/tv_date"
                   android:layout_marginStart="16dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:gravity="center_horizontal"
                   android:text="@string/date"
                   android:paddingBottom="6dp"
                   android:textColor="@color/dark"
                   android:textSize="16sp" />


           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:orientation="vertical">

               <androidx.appcompat.widget.AppCompatImageButton
                   android:id="@+id/ib_location"
                   android:layout_marginTop="5dp"
                   android:contentDescription="@string/icon_location"
                   android:layout_width="45dp"
                   android:layout_height="45dp"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginEnd="10dp"
                   android:background="@drawable/ic_baseline_location_on_24" />

           </LinearLayout>

         </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>